test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/extra_credit/static_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  identifier(a)
  :
  return
  const int(1)
  ;
  }
